[gd_scene load_steps=4 format=2]

[ext_resource path="res://FishGame/Net.gd" type="Script" id=1]
[ext_resource path="res://addons/multiplayer/Sync.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1.00291, 0.999733 )

[node name="Net" type="Area2D"]
position = Vector2( 512, 300 )
scale = Vector2( 150, 90 )
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 1, 1, 1, 0.34902 )
polygon = PoolVector2Array( 1, 1, -1, 1, -1, -1, 1, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Sync" type="Node" parent="."]
script = ExtResource( 2 )
synced = PoolStringArray( "modulate" )

[connection signal="body_entered" from="." to="." method="_on_Net_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Net_body_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_tween_completed"]
